# rust_demo

./: README.md
execl_test/: Cargo.toml  README.md
execl_test/src/: main.rs
hello_world/src/: main.rs
http_test/: Cargo.toml  README.md
http_test/http/src/: httprequest.rs  httpresponse.rs
http_test/http_server/: Cargo.toml
http_test/http_server/public/: 404.html  index.html  style.css
http_test/http_server/src/: handler.rs  httpresponse.rs  main.rs  router.rs  server.rs
tcp_test/: Cargo.toml
tcp_test/tcp_client/src/: main.rs
tcp_test/tcp_server/src/: main.rs
ticket_test/: Cargo.toml
ticket_test/config/: config.yaml
ticket_test/src/common/: config.rs  content.rs  error.rs  mod.rs
ticket_test/src/handler/: ticket.rs
ticket_test/src/models/: dm.rs  goods.rs  mod.rs  order.rs  ticket.rs  user.rs
ticket_test/src/tmp/: dm_resp  goods_resp  order_req  user_resp
tokio_test/: Cargo.toml  README.md
web_service_test/: .env  Cargo.toml
web_service_test/wasm-client/: Cargo.toml  LICENSE_MIT  README.md  package-lock.json
web_service_test/wasm-client/src/: lib.rs
web_service_test/wasm-client/src/common/: errors.rs
web_service_test/wasm-client/src/managers/: course.rs
web_service_test/wasm-client/src/models/: course.rs
web_service_test/wasm-client/www/: index.html  index.js  package-lock.json  package.json
web_service_test/wasm-game-of-life/: Cargo.toml  README.md
web_service_test/wasm-game-of-life/src/: lib.rs
web_service_test/wasm-game-of-life/www/: index.js  package-lock.json  package.json
web_service_test/webservice/: Cargo.toml  README.md
web_service_test/webservice/src/: errors.rs  handlers.rs  models.rs  routers.rs
web_service_test/webservice_refactor/: Cargo.toml  README.md
web_service_test/webservice_refactor/src/common/: state.rs
web_service_test/webservice_refactor/src/handlers/: course.rs  general.rs
web_service_test/webservice_refactor/src/routers/: routers.rs
web_service_test/webservice_refactor_db/: .env  Cargo.toml  README.md
web_service_test/webservice_refactor_db/src/: .env
web_service_test/webservice_refactor_db/src/common/: errors.rs  state.rs
web_service_test/webservice_refactor_db/src/dbaccess/: course.rs
web_service_test/webservice_refactor_db/src/handlers/: course.rs  mod.rs
web_service_test/webservice_refactor_db/src/models/: course.rs
web_service_test/webservice_refactor_db/src/routers/: routers.rs
webcam_live/: Cargo.toml  README.md  Truck.toml  index.html
webcam_live/src/: lib.rs  main.rs
webcam_live_2/: README.md  Truck.toml  index.html  tailwind.config.js
webcam_live_2/src/: lib.rs
webcam_live_2/src/component/: app.rs  controls.rs  video.rs
webcam_live_2/src/models/: device.rs  mod.rs  video_stream.rs
webcam_live_tauri/: Cargo.toml  README.md  Truck.toml  index.html  tailwind.config.js  tailwind.css  tauri.js
webcam_live_tauri/Webcam/: Cargo.toml
webcam_live_tauri/Webcam/src-tauri/: Cargo.toml  tauri.conf.json
webcam_live_tauri/src/: lib.rs  main.rs
webcam_live_tauri/src-tauri/: Cargo.toml  tauri.conf.json
webcam_live_tauri/src-tauri/src/: main.rs
webcam_live_tauri/src/component/: app.rs  controls.rs  mod.rs  video.rs
webcam_live_tauri/src/models/: device.rs  video_stream.rs
