[package]
name = "tokio_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
chrono = "0.4"
futures-util = {version = "0.3.16", features = ["sink"]}
tokio-stream = "0.1.14"
tokio-util = {version = "0.7.4", features = ["codec"]}
serde = {version = "1.0.130", features = ["derive"]}
bincode = "1.3.3"
bytes = "1.4.0"
