[package]
name = "webservice_refactor_db"
version = "0.1.0"
edition = "2021"
default-run = "teacher-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.2"
actix-rt = "2.6.0"
serde = {version ="1.0.132", features = ["derive"]}
chrono = {version ="0.4.19", features = ["serde"]}
dotenv = "0.15.0"
openssl = {version = "0.10.38", features = ["vendored"]}
sqlx = {version = "0.6.3", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
]}


[[bin]]
name = "teacher-service"
